--- a/JiraLogWork/JiraLogWork.csproj
+++ b/JiraLogWork/JiraLogWork.csproj
@@ -172,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contracts\" />
+    <Folder Include="Controls\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\WindowsIcons-license.txt" />
@@ -199,6 +200,18 @@
       <Project>{cc709add-c412-4510-939e-dabc5e1c13a8}</Project>
       <Name>Jira.REST</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\PlayButton_Hover.png" />
+    <Resource Include="Resources\Images\PlayButton_Normal.png" />
+    <Resource Include="Resources\Images\StopButton_Hover.png" />
+    <Resource Include="Resources\Images\StopButton_Normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\ResetButton_Normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\ResetButton_Hover.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
